"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-02-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-02:
	  Complete rework of guile/hackt programs and modules.
		Replaced compiled executables hacguile and hacchpsimguile
		with guile-loadable plug-ins.  
		hacguile/hacchpsimguile are now install-only wrapper scripts
		that emulate what the old executables did.
		New modules are hackt-guile.la, hackt-chpsim-guile.la, 
		the preferred way to load them is through guile's
		command: (use-modules (hackt hackt-primitives)) which
		call (load-extension ...).
		Added new primitives to hac:load-object, and
			hac:init-chpsim-state, for public API.
	  NOTE: this effectively replaces the run-time dependency
		from libguile to the guile executable.  So be it.
	  Updated init_hackt.{sh,csh} to append LTDL_LIBRARY_PATH
		for finding plug-ins at run-time for guile.
	  Regression test suite still passes with guile.


2009-02-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-01:
	  Makefile.am: .ii rules added -x c++ flag to preprocessing command.
	  Added lexyacc_test test program to try to debug flex-issue.
		Test program uses unhacked version of scanner/parser code.
	  Tested on powerpc-apple-darwin8.
		Noticed some prsim test differences in trace files, 
		which need to be investigated, not considered regression
		because it's a new feature.


2009-02-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-00:
	  Massive cleanup of simulator command registration and reuse code.
		Moved templates and macros into sim/command_macros.{h,tcc},
		intergrated command_builtin.cc into command_common.cc
		and removed all command_builtin*.
		Made declaration macros more consistent and organized.
		Clear distinction between stateless and module-only classes.